api: fan leaderboard complete